updated the b2b payout for the retailers and suppliers
